noclip.website appears broken in Safari 18 https://bugs.webkit.org/show_bug.cgi?id=280799 rdar://137643297

Reviewed by NOBODY (OOPS!).

Partial revert of 280236@main

* Source/ThirdParty/ANGLE/src/libANGLE/Framebuffer.cpp:
(gl::Framebuffer::discard):
(gl::Framebuffer::invalidate):