Source/ThirdParty/ANGLE/src/libANGLE/Framebuffer.h
@@ -588,8 +588,6 @@ class Framebuffer final : public angle::ObserverInterface,
                                       Command command,
                                       const FramebufferAttachment *attachment) const;
 
-    void markDrawAttachmentsNeedInit(size_t count, const GLenum *attachments);
-
     FramebufferState mState;
     rx::FramebufferImpl *mImpl;
 
